Fix some Lazarus skin GUI quirks